--- a/style.css
+++ b/style.css
@@ -12,7 +12,7 @@ body ,html {
 }
 
 .pimg1, .pimg2,.pimg3, .pimg4 , .pimg5
-, .pimg6 , .pimg7{
+, .pimg6 , .pimg7, .pimg8 , .pimg9{
     position: relative;
     opacity: 0.70;
     background-position: center;
@@ -22,7 +22,6 @@ body ,html {
 }
 
 section {
-    text-align: center;
     padding: 5px 30px;
 }
 
@@ -61,8 +60,18 @@ section {
     min-height:400px;
 }
 
+.pimg8 {
+    background-image: url('img/city8.jpeg');
+    min-height:400px;
+}
+
+.pimg9 {
+    background-image: url('img/city9.jpeg');
+    min-height:400px;
+}
+
 #h1 {
-    padding-top: 200px;;
+    padding-top: 200px;
     text-align: center;
     font-size: 64px;
     margin: 0;
@@ -80,6 +89,19 @@ section {
     background-color: #f4f4f4;
     color: #666;
     padding: 30px 100px;
+}
+
+.leider {
+    font-weight: bold;
+    padding-left: 25px;
+}
+
+.leiders {
+    font-weight: normal;
+}
+
+.name {
+    padding-left: 25px;
 }
 
 
